<resources>
    <string name="app_name">FoodCraft</string>
    <string name="login_logo">Login logo</string>
    <string name="welcome_title">Bem vindo de volta!</string>
    <string name="welcome_subtitle">Sentimos sua falta.</string>
    <string name="nome">Nome</string>
    <string name="email">Email</string>
    <string name="password">Senha</string>
    <string name="confirm_password">Confirmar senha</string>
    <string name="login">Login</string>
    <string name="forgot_password">Esqueceu a senha?</string>
    <string name="dont_have_an_account">Não tem uma conta? Casdastre-se!</string>
    <string name="lets_begin">Vamos começar!</string>
    <string name="create_an_account">Criar uma conta.</string>
    <string name="registrer">Registrar</string>
    <string name="login_message">não encontrado</string>
    <string name="edit_profile">Salvar mudanças</string>
    <string name="go_back">Voltar</string>
    <string name="recipeQuantity">4</string>
    <string name="recipes">receitas</string>
    <string name="escolha_ingredientes">Escola os ingredientes</string>
    <string name="cancel">Cancelar</string>
    <string name="add">Adicionar</string>
    <string name="recovery_main">Recuperar senha</string>
    <string name="recovery_message">Para redefinir sua senha, informe o e-mail usado no cadastro
    da sua conta e lhe enviaremos um link com as instruções.</string>
    <string name="recovery_link">Enviar link de recuperação</string>
</resources>