<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundradial"
    tools:context=".RecoveryActivity">

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/login_logo_menor" />

    <TextView
        android:id="@+id/textViewRecoveryMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recovery_main"
        android:fontFamily="@font/kavoon_regular"
        android:textSize="34sp"
        android:textColor="@color/orange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewLogo" />

    <TextView
        android:id="@+id/textViewPassRecovery"
        android:layout_width="351dp"
        android:layout_height="70dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/kodchasan_regular"
        android:text="@string/recovery_message"
        android:textColor="@color/orange"
        android:textSize="16sp"
        android:gravity="center"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        app:layout_constraintTop_toBottomOf="@+id/textViewRecoveryMain" />

    <EditText
        android:id="@+id/editTextEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:drawableStart="@drawable/icon_mail"
        android:fontFamily="@font/kodchasan_regular"
        android:padding="8dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:drawablePadding="8dp"
        android:layout_marginStart="34dp"
        android:layout_marginEnd="34dp"
        android:layout_marginTop="22dp"
        android:background="@drawable/background_rectangle_green"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPassRecovery" />

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recovery_link"
        android:fontFamily="@font/kavoon_regular"
        android:textColor="@color/beige"
        android:textSize="20sp"
        android:background="@drawable/backgroun_retangle_orange"
        android:layout_marginStart="34dp"
        android:layout_marginEnd="34dp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmailAddress" />

</androidx.constraintlayout.widget.ConstraintLayout>