<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundradial"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/elipse11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="138dp"
        android:layout_marginTop="290dp"
        android:layout_marginEnd="245dp"
        android:layout_marginBottom="413dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/white_elipse" />

    <ImageView
        android:id="@+id/recipeImage3"
        android:layout_width="189dp"
        android:layout_height="181dp"
        android:layout_marginTop="440dp"
        android:layout_marginEnd="222dp"
        android:layout_marginBottom="110dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/receita_03" />

    <ImageView
        android:id="@+id/recipeImage4"
        android:layout_width="189dp"
        android:layout_height="181dp"
        android:layout_marginStart="206dp"
        android:layout_marginTop="440dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="110dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/receita_04" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="268dp"
        android:background="@drawable/popup_green_medium"
        android:drawableStart="@drawable/icon_arrow_left"
        android:drawablePadding="12dp"
        android:fontFamily="@font/kavoon_regular"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:text="@string/go_back"
        android:textAlignment="center"
        android:textColor="@color/beige"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="52dp"
        android:layout_height="53dp"
        android:layout_marginStart="359dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="648dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/profile_image" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="13dp"
        android:layout_height="26dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="101dp"
        android:layout_marginEnd="382dp"
        android:layout_marginBottom="606dp"
        android:fontFamily="@font/kavoon_regular"
        android:gravity="center"
        android:text="@string/recipeQuantity"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="93dp"
        android:layout_height="26dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="101dp"
        android:layout_marginEnd="240dp"
        android:layout_marginBottom="606dp"
        android:fontFamily="@font/kavoon_regular"
        android:gravity="center"
        android:text="@string/recipes"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/recipeImage1"
        android:layout_width="189dp"
        android:layout_height="181dp"
        android:layout_marginTop="170dp"
        android:layout_marginEnd="222dp"
        android:layout_marginBottom="380dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/receita_01" />

    <TextView
        android:id="@+id/recipeName1"
        android:layout_width="189dp"
        android:layout_height="50dp"
        android:layout_marginEnd="223dp"
        android:layout_marginBottom="331dp"
        android:fontFamily="@font/kodchasan_regular"
        android:padding="4dp"
        android:text="Salada de chuchu na panela de pressão elétrica"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recipeImage1"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/recipeName3"
        android:layout_width="189dp"
        android:layout_height="50dp"
        android:layout_marginTop="621dp"
        android:layout_marginEnd="222dp"
        android:layout_marginBottom="60dp"
        android:fontFamily="@font/kodchasan_regular"
        android:padding="4dp"
        android:text="Feijão-preto com bacon e cominho"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/recipeName4"
        android:layout_width="189dp"
        android:layout_height="50dp"
        android:layout_marginStart="206dp"
        android:layout_marginTop="621dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="60dp"
        android:fontFamily="@font/kodchasan_regular"
        android:padding="4dp"
        android:text="Vinagrete de Chuchu"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/recipeImage2"
        android:layout_width="189dp"
        android:layout_height="181dp"
        android:layout_marginStart="206dp"
        android:layout_marginTop="170dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="380dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/receita_02" />

    <ImageView
        android:id="@+id/elipse1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="138dp"
        android:layout_marginTop="290dp"
        android:layout_marginEnd="245dp"
        android:layout_marginBottom="413dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/white_elipse" />

    <ImageView
        android:id="@+id/hearth1"
        android:layout_width="14dp"
        android:layout_height="14dp"
        app:layout_constraintBottom_toBottomOf="@+id/elipse1"
        app:layout_constraintEnd_toEndOf="@+id/elipse1"
        app:layout_constraintStart_toStartOf="@+id/elipse1"
        app:layout_constraintTop_toTopOf="@+id/elipse1"
        app:srcCompat="@drawable/hearth" />

    <TextView
        android:id="@+id/recipeName2"
        android:layout_width="189dp"
        android:layout_height="50dp"
        android:layout_marginStart="206dp"
        android:layout_marginTop="351dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="330dp"
        android:fontFamily="@font/kodchasan_regular"
        android:padding="4dp"
        android:text="Arroz com passas e limão"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/rectangleBottom"
        android:layout_width="412dp"
        android:layout_height="53dp"
        android:layout_marginTop="683dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bottom_rectangle" />

    <ImageView
        android:id="@+id/elipseGrey2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="132dp"
        android:layout_marginTop="693dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="7dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/elipseOrange"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/elipse_grey_31" />

    <ImageView
        android:id="@+id/elipseOrange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/elipse_53"
        tools:layout_editor_absoluteX="179dp"
        tools:layout_editor_absoluteY="671dp"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/elipseGrey1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="182dp"
        android:layout_marginTop="677dp"
        android:layout_marginEnd="182dp"
        android:layout_marginBottom="7dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/elipse_grey_47" />

    <ImageView
        android:id="@+id/elipseGrey3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="693dp"
        android:layout_marginEnd="132dp"
        android:layout_marginBottom="7dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/elipseOrange"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/elipse_grey_31" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/white_elipse"
        tools:layout_editor_absoluteX="343dp"
        tools:layout_editor_absoluteY="290dp"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/imageView10"
        app:layout_constraintEnd_toEndOf="@+id/imageView10"
        app:layout_constraintStart_toStartOf="@+id/imageView10"
        app:layout_constraintTop_toTopOf="@+id/imageView10"
        app:srcCompat="@drawable/hearth" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/white_elipse"
        tools:layout_editor_absoluteX="132dp"
        tools:layout_editor_absoluteY="563dp"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/imageView12"
        app:layout_constraintEnd_toEndOf="@+id/imageView12"
        app:layout_constraintStart_toStartOf="@+id/imageView12"
        app:layout_constraintTop_toTopOf="@+id/imageView12"
        app:srcCompat="@drawable/hearth" />

    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/white_elipse"
        tools:layout_editor_absoluteX="348dp"
        tools:layout_editor_absoluteY="563dp"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/imageView14"
        app:layout_constraintEnd_toEndOf="@+id/imageView14"
        app:layout_constraintStart_toStartOf="@+id/imageView14"
        app:layout_constraintTop_toTopOf="@+id/imageView14"
        app:srcCompat="@drawable/hearth" />

</androidx.constraintlayout.widget.ConstraintLayout>